complete header section

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,10 +5,10 @@
   --font-base: "Lato", sans-serif;
 
   --primary-color: #edf2f8;
-  --secondary-color: #313bac;
+  --secondary-color: #0e7490;
   --black-color: #030303;
-  --lightGray-color: #e4e4e4;
-  --gray-color: #6b7688;
+  --lightGray-color: #cbd5e1;
+  --gray-color: #4b5563;
   --brown-color: #46364a;
   --white-color: #ffffff;
 }
