--- a/client/src/components/Navbar/Navbar.scss
+++ b/client/src/components/Navbar/Navbar.scss
@@ -8,6 +8,7 @@
   backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px);
   border: 1px solid rgba(255, 255, 255, 0.18);
+  color: var(--white-color);
   position: fixed;
   z-index: 2;
 }
@@ -16,6 +17,11 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
+  font-size: 20px;
+  font-weight: 500;
+  background-color: var(--gray-color);
+  padding: 10px;
+  border-radius: 50%;
   img {
     width: 90px;
     height: 20px;
@@ -51,7 +57,7 @@
       font-weight: 700;
       transition: all 0.3s ease-in-out;
       &:hover {
-        color: (--secondary-color);
+        color: var(--secondary-color);
       }
     }
     &:hover {
