--- a/client/src/container/Header/Header.scss
+++ b/client/src/container/Header/Header.scss
@@ -1,9 +1,7 @@
 #home {
   position: relative;
-  background: url("../../assets/bgIMG.png");
-  background-size: cover;
-  background-repeat: repeat;
-  background-position: center;
+  padding-bottom: 8rem;
+  background-color: #fdf2e9;
   .app__wrapper {
     padding: 0;
     .copyright {
@@ -17,7 +15,6 @@
   width: 100%;
   height: 100%;
   flex-direction: row;
-
   padding: 6rem 2rem 0;
 
   @media screen and(min-width:2000px) {
@@ -145,6 +142,7 @@
 }
 
 .app__header-img {
+  margin-left: 2.5rem;
   flex: 1;
   height: 100%;
   display: flex;
