--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,8 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap");
 
 :root {
-  --font-base: "Lato", sans-serif;
+  --font-base: "Inter", sans-serif;
 
   --primary-color: #edf2f8;
   --secondary-color: #0e7490;
