--- a/client/src/container/Header/Header.scss
+++ b/client/src/container/Header/Header.scss
@@ -1,7 +1,7 @@
 #home {
   position: relative;
   padding-bottom: 8rem;
-  background-color: #fdf2e9;
+  background-color: #e6fcf5;
   .app__wrapper {
     padding: 0;
     .copyright {
