--- a/client/src/components/Navbar/Navbar.scss
+++ b/client/src/components/Navbar/Navbar.scss
@@ -20,6 +20,7 @@
   font-size: 20px;
   font-weight: 500;
   background-color: var(--gray-color);
+  font-family: serif;
   padding: 10px;
   border-radius: 50%;
   img {
@@ -80,7 +81,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: var(--secondary-color);
+  background-color: var(--gray-color);
 
   svg {
     width: 70%;
