--- a/client/src/container/About/About.scss
+++ b/client/src/container/About/About.scss
@@ -1,8 +1,11 @@
+#about {
+  background-color: #f8f9fa;
+}
+
 .app__about {
   flex: 1;
   width: 100%;
   flex-direction: column;
-  background-color: #fdf2e9;
 }
 
 .app__profiles {
@@ -36,9 +39,4 @@
       height: 320px;
     }
   }
-}
-
-.about-p {
-  color: #1f2937;
-  line-height: 5;
 }
