fix some issues

--- a/client/src/components/Navbar/Navbar.scss
+++ b/client/src/components/Navbar/Navbar.scss
@@ -19,7 +19,7 @@
   align-items: center;
   font-size: 32px;
   font-weight: 500;
-  background-color: var(--gray-color);
+  background-color: #e67e22;
   font-family: serif;
   padding: 10px;
   border-radius: 50%;
@@ -81,7 +81,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: var(--gray-color);
+  background-color: #e67e22;
 
   svg {
     width: 70%;
