--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,11 +4,11 @@
 :root {
   --font-base: "Inter", sans-serif;
 
-  --primary-color: #4dabf7;
-  --secondary-color: #343a40;
+  --primary-color: #e67e22;
+  --secondary-color: #e67e22;
   --black-color: #030303;
   --lightGray-color: #cbd5e1;
-  --gray-color: #495057;
+  --gray-color: #555;
   --brown-color: #46364a;
   --white-color: #ffffff;
 }
@@ -18,4 +18,8 @@
   padding: 0;
   margin: 0;
   scroll-behavior: smooth;
+}
+
+body {
+  color: #555;
 }
